FEAT: Added navbar, colors, fonts, and react router

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
