--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* The 'overflow-y: scroll' property is used to ensure that the vertical scrollbar is always visible,
+  regardless of whether the content actually requires scrolling or not. This prevents layout shifts
+  By reserving space for the scrollbar at all times, we maintain a consistent layout and avoid sudden changes in the 
+  appearance of the page */
+html {
+  overflow-y: scroll;
+}
