--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* The 'overflow-y: scroll' property is used to ensure that the vertical scrollbar is always visible,
+/* The 'overflow-y: scroll'  property is used to ensure that the vertical scrollbar is always visible,
   regardless of whether the content actually requires scrolling or not. This prevents layout shifts
   By reserving space for the scrollbar at all times, we maintain a consistent layout and avoid sudden changes in the 
   appearance of the page */
@@ -51,4 +51,10 @@ html {
 /* For today span */
 .rmdp-today span {
   background-color: #33b8ad !important;
+}
+
+@layer components {
+  .genericHambugerLine {
+    @apply my-1 h-[2px] w-7 transform rounded-full transition;
+  }
 }
